[gd_scene load_steps=14 format=2]

[ext_resource path="res://gameplay/ui_gameplay.gd" type="Script" id=1]
[ext_resource path="res://mainmenu/assets/background.jpg" type="Texture" id=2]
[ext_resource path="res://player/doomer_without.png" type="Texture" id=3]
[ext_resource path="res://player/cigarette.tscn" type="PackedScene" id=4]
[ext_resource path="res://mainmenu/assets/golden_elephant_21.tres" type="DynamicFont" id=5]
[ext_resource path="res://clients/ui_client.gd" type="Script" id=6]
[ext_resource path="res://gameplay/Interface.gd" type="Script" id=7]
[ext_resource path="res://mainmenu/mainmenu_theme.tres" type="Theme" id=8]
[ext_resource path="res://pawnshop/furnitures/doors/doors_scene.tscn" type="PackedScene" id=9]
[ext_resource path="res://pawnshop/furnitures/cctv/cctv_scene.tscn" type="PackedScene" id=10]
[ext_resource path="res://dialogs/dialogs_scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://offers/offer_scene.tscn" type="PackedScene" id=12]
[ext_resource path="res://screens/story_scene.tscn" type="PackedScene" id=13]

[node name="Node2D" type="Node2D"]
position = Vector2( 83, 534 )

[node name="Interface" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="Interface"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="MoneyRect" type="ColorRect" parent="Interface"]
margin_left = 6.10352e-05
margin_top = 3.0
margin_right = 11.0001
margin_bottom = 43.0

[node name="MoneyLabel" type="Label" parent="Interface"]
margin_left = 13.0
margin_top = 4.0
margin_right = 114.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "$0"
valign = 1

[node name="DayRect" type="ColorRect" parent="Interface"]
margin_top = 47.0
margin_right = 11.0
margin_bottom = 87.0

[node name="DayLabel" type="Label" parent="Interface"]
margin_left = 15.0
margin_top = 49.0
margin_right = 111.0
margin_bottom = 87.0
custom_fonts/font = ExtResource( 5 )
text = "Day: 1"
valign = 1

[node name="Client" type="TextureRect" parent="Interface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -308.0
margin_top = -275.0
margin_right = -2.0
margin_bottom = -4.0
expand = true
script = ExtResource( 6 )

[node name="Player" type="TextureRect" parent="Interface"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -619.0
margin_top = -480.0
texture = ExtResource( 3 )
expand = true

[node name="Smoke" parent="Interface/Player" instance=ExtResource( 4 )]
position = Vector2( 181, 324 )

[node name="ClientTweenIn" type="Tween" parent="Interface"]

[node name="ClientTweenOut" type="Tween" parent="Interface"]

[node name="PawnshopButton" type="Button" parent="Interface"]
margin_top = 93.0
margin_right = 144.0
margin_bottom = 126.0
theme = ExtResource( 8 )
text = "Your pawnshop"

[node name="Dialogs" parent="Interface" instance=ExtResource( 11 )]
visible = false

[node name="Offer" parent="Interface" instance=ExtResource( 12 )]
visible = false
anchor_left = 1.0
anchor_bottom = 0.0
margin_left = -379.0
margin_top = 32.0
margin_right = -139.0
margin_bottom = 259.0

[node name="Furnitures" type="Node" parent="Interface"]

[node name="Doors" parent="Interface/Furnitures" instance=ExtResource( 9 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -211.0
margin_right = 42.0
margin_bottom = 114.0

[node name="CCTV" parent="Interface/Furnitures" instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -223.0
margin_top = 28.0
margin_right = -41.0
margin_bottom = 182.0

[node name="MusicPlayer" type="AudioStreamPlayer" parent="Interface"]
bus = "Music"

[node name="SFXPlayer" type="AudioStreamPlayer" parent="Interface"]
bus = "SFX"

[node name="Story" parent="Interface" instance=ExtResource( 13 )]
visible = false

[node name="FadeOut" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Fade" type="ColorRect" parent="FadeOut"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="FadeTween" type="Tween" parent="FadeOut"]

[connection signal="tween_completed" from="Interface/ClientTweenIn" to="Interface/Client" method="_on_ClientTweenIn_tween_completed"]
[connection signal="tween_completed" from="Interface/ClientTweenOut" to="Interface/Client" method="_on_ClientTweenOut_tween_completed"]
[connection signal="pressed" from="Interface/PawnshopButton" to="Interface" method="_on_PawnshopButton_pressed"]
[connection signal="tween_completed" from="FadeOut/FadeTween" to="FadeOut" method="_on_FadeTween_tween_completed"]
